もにゃ→にゃーん

--- a/lang/dict.json
+++ b/lang/dict.json
@@ -1,11 +1,11 @@
 {
   "このアプリについて": {
     "ja": "このアプリについて",
-    "en": "About Monya"
+    "en": "About This App"
   },
   "もにゃ": {
-    "ja": "もにゃ",
-    "en": "Monya"
+    "ja": "にゃーん",
+    "en": "Nyaan"
   },
   "作った人": {
     "ja": "作った人",
